--- a/package.json
+++ b/package.json
@@ -8,21 +8,21 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "core-js": "^3.22.8",
-    "dotenv-flow": "^3.2.0",
-    "mobx": "^6.6.0",
+    "core-js": "3.23.3",
+    "dotenv-flow": "3.2.0",
+    "mobx": "6.6.1",
     "next": "12.1.6",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "redoc": "^2.0.0-rc.72",
-    "redox": "^0.1.1",
-    "styled-components": "^5.3.5"
+    "redoc": "2.0.0-rc.72",
+    "redox": "0.1.1",
+    "styled-components": "5.3.5"
   },
   "devDependencies": {
     "@types/node": "17.0.40",
-    "@types/react": "18.0.12",
-    "eslint": "8.17.0",
+    "@types/react": "18.0.14",
+    "eslint": "8.18.0",
     "eslint-config-next": "12.1.6",
-    "typescript": "4.7.3"
+    "typescript": "4.7.4"
   }
 }
